# libreplex-program-library

./: .ammanrc.js  .gitignore  .npmignore  Anchor.toml  Cargo.ol  Cargo.toml  LICENSE  README.md  lefthook.yml  legacy.json  package-lock.json  package.json  tsconfig.json
lib/libreplex_proc_macros/: Cargo.toml
programs/libre-creator-controls/: Cargo.toml
programs/libre-creator-controls/src/: lib.rs
programs/libre-creator-controls/src/instructions/: initialize.rs  mint.rs  mod.rs
programs/libreplex/: Cargo.toml
programs/libreplex/src/: constants.rs  errors.rs  lib.rs  mod.rs
programs/libreplex/src/instructions/: .#create_metadata.rs  .#edit_collection_data.rs  append_to_ordinal.rs  create_collection.rs  create_collection_data.rs  create_collection_flat.rs  create_group.rs  create_metadata.rs  create_ordinal.rs  delegate_group_permissions.rs  delegate_metadata_permissions.rs  delete_collection.rs  delete_collection_data.rs  delete_collection_permissions.rs  delete_group.rs  delete_metadata.rs  delete_metadataextension.rs  delete_permissions.rs  edit_collection.rs  edit_collection_data.rs  edit_collection_permissions.rs  edit_metadata.rs  edit_metadata_permissions.rs  edit_metadataextended.rs  edit_permissions.rs  expand_metadata.rs  extend_metadata.rs  group_add.rs  mod.rs  update_group.rs  update_metadata.rs  update_permissions.rs
programs/libreplex/src/processors/: mod.rs
programs/libreplex/src/shared/: check_bump.rs  mod.rs
programs/libreplex/src/state/: collection.rs  collection_data.rs  group.rs  metadata.rs  metadataextended.rs  metadataextension.rs  mod.rs  nft_metadata_unique.rs  ordinal.rs  permissions.rs
programs/libreplex/tests/: create_metadata_test.rs  inscriptions_test.rs.old  permissions_test.rs  permissions_test.rs.old
programs/libreplex/tests/js/: create-metadata-test.js  create-metadata-test.ts
programs/libreplex_creator_controls/: Cargo.toml
programs/libreplex_creator_controls/src/: controls.rs  errors.rs  lib.rs  state.rs
programs/libreplex_creator_controls/src/instructions/: initialize.rs  mint.rs  mod.rs  update.rs
programs/libreplex_default_renderer/: Cargo.toml
programs/libreplex_default_renderer/src/: lib.rs
programs/libreplex_default_renderer/src/instructions/: canonical.rs  input.rs  mod.rs
programs/libreplex_default_renderer/tests/: canonical_test.rs  canonical_test.rs.old
programs/libreplex_editions/: Cargo.toml
programs/libreplex_editions/src/: errors.rs  lib.rs  state.rs
programs/libreplex_editions/src/instructions/: add_to_hashlist.rs  claim_mint_authority.rs  claim_update_authority.rs  initialise.rs  mint.rs  mod.rs  update_authority.rs
programs/libreplex_editions/src/logic/: add_to_hashlist.rs  mod.rs
programs/libreplex_editions_controls/: Cargo.toml  README.md
programs/libreplex_editions_controls/src/: errors.rs  lib.rs  mod.rs  state.rs
programs/libreplex_fair_launch/: Cargo.toml  N1FTSwV4sLvYzPK1wxkeTV88ycD9m6vUoSVV34wkf7c.json  out  out.json
programs/libreplex_fair_launch/src/: deploy_logic.rs  errors.rs  lib.rs  mod.rs  state.rs
programs/libreplex_fair_launch/src/state/: base.rs  (+3 more)
programs/libreplex_fair_launch/tests/: fair_launch_hybrid_test.rs.old  fair_launch_token_22_deflationary_test.rs  fair_launch_token_22_test.rs  legacy_inscribers_test.rs.old  spl20_test.rs.old
programs/libreplex_fair_launch_legacy/: Cargo.toml
programs/libreplex_inscriptions/: Cargo.toml  Cargo.toml.bak
programs/libreplex_inscriptions/src/: constants.rs  errors.rs  lib.rs
programs/libreplex_inscriptions/tests/: inscriptions_test.rs  inscriptions_v3_test.rs
programs/libreplex_legacy/: Cargo.toml
programs/libreplex_legacy/src/: errors.rs  lib.rs
programs/libreplex_legacy/tests/: legacy_inscribers_test.rs
programs/libreplex_legacy_inscribers/: Cargo.toml
programs/libreplex_legacy_inscribers/src/: lib.rs
programs/libreplex_liquidity/: Cargo.toml
programs/libreplex_liquidity/src/: bootstrap_pool.rs  bootstrap_pool.rs.bak  create_lookup_table_for_liquidity.rs  hybrid_redeem.rs  initialise.rs  initialise_v2.rs  initialize_hybrid_redeemer.rs  join.rs  lib.rs  mint.rs  mint_spl.rs  reduce_mint_count.rs  relinquish_cosigner.rs  state.rs  swap_to_fungible.rs
programs/libreplex_loop/: Cargo.toml
programs/libreplex_metadata/: Cargo.toml  README.md
programs/libreplex_metadata/src/: constants.rs  errors.rs  lib.rs
programs/libreplex_metadata/tests/: create_collection_test.rs  create_group_test.rs  create_metadata_inscription_test.rs  create_metadata_test.rs  create_metadata_update_summary_test.rs  create_metadata_update_summary_util.rs  create_metadata_util.rs  permissions_test.rs  permissions_test.rs.old  update_metadata_test.rs  update_metadata_util.rs
programs/libreplex_monoswap/: Cargo.toml
programs/libreplex_monoswap/src/: errors.rs  lib.rs
programs/libreplex_monoswap/tests/: create_nifty_swap.rs  create_nifty_swap_test.rs  helpers.rs  nifty_swap_test.rs
programs/libreplex_monoswap_deprecated/: Cargo.toml
programs/libreplex_nft/: Cargo.toml  README.md
programs/libreplex_nft/src/: errors.rs  lib.rs  state.rs
programs/libreplex_nifty_hybrid/: Cargo.toml
programs/libreplex_nifty_hybrid/src/: initialise.rs  lib.rs  mint.rs  relinquish_cosigner.rs  state.rs  update_metadata.rs
programs/libreplex_pipelines/: Cargo.toml
programs/libreplex_pipelines/src/: check_mint_against_filter.rs  errors.rs  lib.rs
programs/libreplex_shared/: Cargo.toml
programs/libreplex_shared/shared/: sleep.ts
programs/libreplex_shared/src/: errors.rs  lib.rs  logic.rs  validators.rs
programs/libreplex_shop/: Cargo.toml
programs/libreplex_shop/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/libreplex_spl20/: Cargo.toml
programs/libreplex_spl20/src/: errors.rs  lib.rs  state.rs
programs/libreplex_test_utils/: Cargo.toml
programs/libreplex_test_utils/src/: create_metadata_util.rs  lib.rs
utils/bubblegum_proxy/: Cargo.toml
utils/libreplex_shared/: Cargo.toml
utils/libreplex_shared/src/: errors.rs  lib.rs
utils/vault-proxy/: Cargo.toml  vault.json
utils/vault-proxy/src/: lib.rs
(+462 files in other folders)
