[package]
name = "libreplex_proc_macros"
version = "0.1.0"
edition = "2021"
description = "proc_macros shared lib from LibrePlex"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = {version="1.0.57",features=["full","fold"]}
quote = "1.0.8"
static_assertions = "1.1.0"
proc-macro2 = "1.0"