[package]
name = "libre-creator-controls"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "libre_creator_controls"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = {version = "^0.27", features = ["init-if-needed"]}
librecreator = {path='../librecreator', features = ["cpi"]}
anchor-spl = "^0.27"
spl-token = { version = "3.5.0",  features = ["no-entrypoint"] }
solana-program = "~1.14"
winnow="=0.4.1"
libreplex_metadata = {path='../libreplex_metadata',  features = ["cpi"]}
arrayref = "0.3.7"
prog_common = {path='../../lib/prog_common'}
proc_macros = {path='../../lib/proc_macros'}
mocha = "0.1.1"


[dev-dependencies]
mocha = "0.1.1"
bincode = "1.3.3"
assert_matches = "1.5.0"
solana-program-test = "~1.14"
solana-sdk= "~1.14"
