[package]
name = "libreplex_creator_controls"
version = "0.3.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_creator_controls"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
libreplex_creator = {path='../libreplex_creator', features = ["cpi"]}
anchor-spl = "0.29.0"
spl-token = { version = "~4",  features = ["no-entrypoint"] }
solana-program = "~1.18"
winnow="=0.4.1"
libreplex_metadata = {path='../libreplex_metadata',  features = ["cpi"]}
arrayref = "0.3.7"
mocha = "0.1.1"
libreplex_nft = {path='../libreplex_nft',  features = ["cpi"]}

[dev-dependencies]
mocha = "0.1.1"
bincode = "1.3.3"
assert_matches = "1.5.0"
solana-program-test = "1.17.13"
solana-sdk= "1.17.13"
