[package]
name = "libreplex_default_renderer"
version = "0.1.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_default_renderer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
libreplex_metadata = { version='^0.2', path='../libreplex_metadata', features =["no-entrypoint"]}

bmp = "0.5.0"

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = ">1.14"
solana-sdk = ">1.14"
solana-program = ">1.14"


