[package]
name = "libreplex_fair_launch"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/Libreplex/libreplex-program-library"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_fair_launch"

[features]
no-entrypoint = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "~0.29", features = ["init-if-needed"]}
anchor-spl = {version = "~0.29"}
libreplex_inscriptions = {version="*", path = "../libreplex_inscriptions", features =["cpi", "no-entrypoint"]}

solana-program = {version = "1.17.22"}
arrayref = "0.3.7"
libreplex_shared = {version= "*", path = "../libreplex_shared", features=["no-entrypoint"] }
mpl-token-metadata = { version="~3" }
spl-token-2022 = {version = "~1.0", features = ["no-entrypoint"]}
spl-token-metadata-interface = {version= "0.2.0"}
spl-token-group-interface = {version= "0.1.0"}
spl-type-length-value = {version= "0.3.0"}
spl-pod = {version= "0.1.0"}
podded = "0.5.1"
bytemuck = "1.14"

[dev-dependencies]
solana-program-test = {version= "1.17.22"}
solana-sdk= "1.17.22"