[package]
name = "libreplex_inscriptions"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_inscriptions"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "^0.27", features = ["init-if-needed"]}
anchor-spl = "^0.27"
spl-token = { version = "3.5.0",  features = ["no-entrypoint"] }
solana-program = "~1.14"
winnow="=0.4.1"
libreplex_proc_macros = {version = '0.1.0', path='../../lib/libreplex_proc_macros'}
bytemuck = "1.13.1"

[dev-dependencies]
mocha = "0.1.1"
bincode = "1.3.3"
assert_matches = "1.5.0"
solana-program-test = "~1.14"
solana-sdk= "~1.14"
