[package]
name = "libreplex_inscriptions"
version = "0.1.10"
description = "Inscriptions from LibrePlex"
license = "MIT"
edition = "2021"
repository = "https://github.com/LibrePlex/metadata"
rust-version = "1.68"

[profile.release]
lto = false

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_inscriptions"

[features]
allow-missing-optionals = ["anchor-derive-accounts/allow-missing-optionals"]
init-if-needed = ["anchor-derive-accounts/init-if-needed"]
derive = []
default = []
event-cpi = ["anchor-attribute-event/event-cpi"]
anchor-debug = [
    "anchor-attribute-event/anchor-debug",
    "anchor-derive-accounts/anchor-debug"
]
cpi = []
no-entrypoint = []

[dependencies]
anchor-lang = {version = "0.28.0"}
anchor-derive-accounts = { version = "0.28.0" }
anchor-attribute-event = { version = "0.28.0" }

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = ">1.14"
solana-sdk = ">1.14"
solana-program = ">1.14"



