[package]
name = "libreplex_inscriptions"
version = "0.5.1"
description = "Inscriptions from LibrePlex"
license = "MIT"
edition = "2021"
repository = "https://github.com/LibrePlex/libreplex-program-library"
rust-version = "1.68"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_inscriptions"

[features]
allow-missing-optionals = ["anchor-derive-accounts/allow-missing-optionals"]
init-if-needed = ["anchor-derive-accounts/init-if-needed"]
derive = []
default = []
event-cpi = ["anchor-attribute-event/event-cpi"]
anchor-debug = [
    "anchor-attribute-event/anchor-debug",
    "anchor-derive-accounts/anchor-debug"
]
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "~0.30", features = ["init-if-needed"]}
anchor-spl = {version = "~0.30"}
anchor-derive-accounts = { version = "0.30.0" }
anchor-attribute-event = { version = "0.30.0" }

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = "1.17.13"
solana-sdk = "1.17.13"
solana-program = "1.17.13"
