[package]
name = "libreplex_legacy_inscribers"
version = "0.0.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/LibrePlex/metadata"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_legacy_inscribers"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "~0.28", features = ["init-if-needed"]}
anchor-spl = {version = "~0.28"}
libreplex_inscriptions = {version = "*", path="../libreplex_inscriptions", features =["cpi", "no-entrypoint"]}
solana-program = {version = "~1.16"}
mpl-token-metadata = { version="=3.1.0" }

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = "~1.16"
solana-sdk = "~1.16"
