[package]
name = "libreplex_metadata"
version = "0.6.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/LibrePlex/metadata"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = "0.28.0"
libreplex_inscriptions = {version = '0.1.7', features=["cpi", "no-entrypoint"]}
spl-token-2022 = "0.6.1"

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = ">1.14"
solana-sdk = ">1.14"
solana-program = ">1.14"
