[package]
name = "libreplex_metadata"
version = "0.10.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/LibrePlex/metadata"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = "0.28.0"
libreplex_inscriptions = {version = '0.1.10', features=["cpi", "no-entrypoint"]}
spl-token-2022 = {version = "0.7.0", features = ["no-entrypoint"]}
solana-program = "1.16"

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = "1.16"
solana-sdk = "1.16"
libreplex_test_utils = {path="../libreplex_test_utils"}