[package]
name = "libreplex_metadata"
version = "0.10.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/LibrePlex/metadata"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "~0.28", features = ["init-if-needed"]}
anchor-spl = {version = "~0.28"}
libreplex_inscriptions = {version = "*", path="../libreplex_inscriptions", features =["cpi", "no-entrypoint"]}
spl-token-2022 = {version = "~0.7", features = ["no-entrypoint"]}
solana-program = {version = "~1.16"}

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = "~1.16"
solana-sdk = "~1.16"
libreplex_test_utils = {path="../../utils/libreplex_test_utils", features =["cpi", "no-entrypoint"]}
