[package]
name = "libreplex_monoswap"
version = "0.0.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/LibrePlex/metadata"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_monoswap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "~0.29", features = ["init-if-needed"]}
anchor-spl = {version = "~0.29"}
libreplex_fair_launch = {version = "*", path="../libreplex_fair_launch", features =["cpi", "no-entrypoint"]}
spl-associated-token-account = "2.2.0"
solana-program = {version = "1.17.22"}
libreplex_shared = {version = "*", path = "../libreplex_shared", features=["cpi"]}
mpl-token-metadata = { version="~3" }
nifty-asset = "0.0.1-alpha.3"

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = "1.17.22"
solana-sdk = "1.17.22"
