[package]
name = "libreplex_monoswap_deprecated"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/LibrePlex/metadata"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_monoswap_deprecated"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "~0.29", features = ["init-if-needed"]}
anchor-spl = {version = "~0.29"}
spl-associated-token-account = "~2"
solana-program = {version = "~1.17"}
libreplex_shared = {version= "*", path="../../../libreplex_shared/programs/libreplex_shared", features=["no-entrypoint"] }
mpl-token-metadata = { version="~3" }

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = "~1.17"
solana-sdk = "~1.17"
