[package]
name = "libreplex_nifty_hybrid"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/Libreplex/libreplex-program-library"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_nifty_hybrid"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build","anchor-lang/idl-build", "libreplex_fair_launch/idl-build"]

[dependencies]
anchor-lang = {version = "~0.29", features = ["init-if-needed"]}
anchor-spl = {version = "~0.29"}
libreplex_fair_launch = {version="*", path = "../libreplex_fair_launch", features =["cpi", "no-entrypoint"]}
libreplex_shared = {version = "*", path = "../libreplex_shared", features=["cpi"]}
solana-program = "~1.17"
solana-address-lookup-table-program = "^1.17"
dyn-fmt = "0.3.0"
nifty-asset = {version = "0.3.0"}
libreplex-monoswap-client = {version = "*", path = "../../../monoswap/clients/rust/"}

[dev-dependencies]
solana-program-test = {version= "1.17.22"}
