[package]
name = "libreplex_pipelines"
version = "0.0.0"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/LibrePlex/metadata"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_pipelines"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = {version = "~0.29", features = ["init-if-needed"]}
anchor-spl = {version = "~0.29"}
libreplex_fair_launch = {version = "*", path="../libreplex_fair_launch", features =["cpi", "no-entrypoint"]}
spl-associated-token-account = "2.2.0"
solana-program = {version = "1.17.22"}
mpl-token-metadata = { version="~3" }
libreplex_shared = {version = "*", path = "../libreplex_shared", features=["cpi"]}
libreplex_liquidity = {version = "*", path="../libreplex_liquidity", features =["cpi", "no-entrypoint"]}
libreplex_monoswap = {version = "*", path="../libreplex_monoswap", features =["cpi", "no-entrypoint"]}
spl-token-metadata-interface = {version= "~0.3"}
spl-pod = {version= "~0.2"}

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = "1.17.22"
solana-sdk = "1.17.22"
