[package]
name = "libreplex_shop"
version = "0.3.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_shop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.28.0"}
libreplex_shared = {version = "*", path="../libreplex_shared"}
libreplex_metadata = {version = "0.6.0", features =["cpi", "no-entrypoint"]}
spl-token-2022 = "0.6.1"
solana-program = ">1.14"

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = ">1.14"
solana-sdk = ">1.14"

