[package]
name = "libreplex_shop"
version = "0.6.1"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_shop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.28.0"}
libreplex_shared = {version = "*", path="../../utils/libreplex_shared"}
libreplex_metadata = {version = "*", path="../libreplex_metadata",  features =["cpi", "no-entrypoint"]}
spl-token-2022 = {version = "0.7.0", features = ["no-entrypoint"]}
solana-program = "~1.16"

[dev-dependencies]
mocha = "0.1.1"
assert_matches = "1.5.0"
solana-program-test = "~1.16"
solana-sdk = "~1.16"

