[package]
name = "libreplex_spl20"
version = "0.0.1"
description = "Created with Anchor"
edition = "2021"
license = "MIT"
repository = "https://github.com/Libreplex/libreplex-program-library"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_spl20"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "~0.29", features = ["init-if-needed"]}
anchor-spl = {version = "~0.29"}
spl-token-2022 = {version = "~0.9", features = ["no-entrypoint"]}
solana-program = {version = "~1.16"}
libreplex_shared = {version= "*", path = "../libreplex_shared", features=["no-entrypoint"] }
libreplex_inscriptions = {version="*", path = "../libreplex_inscriptions", features =["cpi", "no-entrypoint"]}
