[package]
name = "libreplex_shared"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_shared"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = "^0.29"
anchor-spl = "^0.29 "
solana-program = "~1.16"
spl-token-2022 = {version = "0.7.0", features = ["no-entrypoint"]}
